--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "lint-staged": "lint-staged"
     },
     "dependencies": {
+        "antd": "^5.19.3",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "styled-components": "^6.1.12"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.3.0",
