fix: fix config of prettier and eslint

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,21 @@
 {
-  "printWidth": 80, 
-  "useTabs": false, 
-  "tabWidth": 4, 
-  "trailingComma": "none", 
-  "semi": true, 
-  "singleQuote": false, 
-  "bracketSpacing": true, 
-  "arrowParens": "always", 
-  "jsxSingleQuote": false, 
-  "bracketSameLine": false, 
-  "endOfLine": "lf"
+  "arrowParens": "always",
+  "bracketSameLine": false,
+  "bracketSpacing": true,
+  "semi": true,
+  "experimentalTernaries": false,
+  "singleQuote": true,
+  "jsxSingleQuote": false,
+  "quoteProps": "as-needed",
+  "trailingComma": "all",
+  "singleAttributePerLine": false,
+  "htmlWhitespaceSensitivity": "css",
+  "vueIndentScriptAndStyle": false,
+  "proseWrap": "preserve",
+  "insertPragma": false,
+  "printWidth": 80,
+  "requirePragma": false,
+  "tabWidth": 2,
+  "useTabs": false,
+  "embeddedLanguageFormatting": "auto"
 }
