feat: add layout components

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint-fix": "eslint src --fix --ext .ts,.tsx",
     "preview": "vite preview",
     "prepare": "husky",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "format": "npx prettier . --check"
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
@@ -46,7 +47,6 @@
   "lint-staged": {
     "*.ts": [
       "npm run lint",
-      "npm run format",
       "git add ."
     ]
   }
