--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.19.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-number-format": "^5.4.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
