--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
 
       # Cài đặt dependencies
       - name: Install dependencies
-        run: npm install
+        run: npm install react-number-format --legacy-peer-deps
 
       # Kiểm tra code với ESLint
       - name: Lint code
