--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,8 @@ jobs:
           npx commitlint --version
       - name: Install commitlint
         run: |
-          npm install conventional-changelog-conventionalcommits
-          npm install commitlint@latest
+          npm install conventional-changelog-conventionalcommits --legacy-peer-deps
+          npm install commitlint --legacy-peer-deps --legacy-peer-deps
 
       - name: Validate current commit (last commit) with commitlint
         if: github.event_name == 'push'
