--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "antd": "^5.19.3",
+    "commitlint": "^19.3.0",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-number-format": "^5.4.0",
